# AI-Operating-System-for-Companies

./: .env.ibmcloud.example  .gitignore  IBM-CLOUD-SETUP.md  README.md  ai-os-for-companies-engineering-execution-blueprint.html  docker-compose.yml  pyproject.toml  run-local.sh
.bob/db/: bob.db  bob.db-shm  bob.db-wal
.bob/playground/: ai-os-engineering-blueprint.md  aios-next-steps-plan.md  bob-task-0a67aff86bbbc26f04347c45773fef1c-2026-07-12.json
.bob/playground/aios/: .env.example  .gitignore  HOW-TO-RUN.md  README.md  pyproject.toml  run-local.ps1
.bob/playground/aios/scripts/: backfill.py  seed_graph.py
.bob/playground/aios/services/agents/: pyproject.toml
.bob/playground/aios/services/agents/agents/: main.py
.bob/playground/aios/services/agents/agents/monitor_agent/: agent.py
.bob/playground/aios/services/agents/agents/query_agent/: __init__.py  agent.py
.bob/playground/aios/services/agents/agents/synthesis_agent/: __init__.py
.bob/playground/aios/services/connectors/: Dockerfile  pyproject.toml
.bob/playground/aios/services/connectors/connectors/: base.py
.bob/playground/aios/services/connectors/connectors/github/: connector.py
.bob/playground/aios/services/connectors/connectors/linear/: connector.py
.bob/playground/aios/services/gateway/gateway/: main.py
.bob/playground/aios/services/ingestion/: Dockerfile
.bob/playground/aios/services/ingestion/ingestion/entity_resolution/: __init__.py
.bob/playground/aios/services/interface/interface/: main.py
.bob/playground/aios/services/memory/memory/ledger/: __init__.py
.bob/playground/aios/services/memory/memory/vector/: client.py
.bob/playground/aios/tests/: pyproject.toml
.bob/playground/aios/tests/unit/: test_access_control.py  test_entity_resolution.py
.bob/settings/: custom_modes.yaml  mcp.json  settings.json
scripts/: _verify_er_fix.py  verify_ibmcloud.py
services/agents/: Dockerfile  pyproject.toml
services/agents/agents/: __init__.py
services/agents/agents/monitor_agent/: __init__.py
services/agents/agents/synthesis_agent/: agent.py
services/agents/agents/verification_agent/: __init__.py  agent.py
services/connectors/: pyproject.toml
services/connectors/connectors/: __init__.py  main.py
services/connectors/connectors/github/: __init__.py
services/connectors/connectors/linear/: __init__.py
services/connectors/connectors/slack/: __init__.py  connector.py
services/enrichment/: Dockerfile  pyproject.toml
services/enrichment/enrichment/: pii_scrubber.py  pipeline.py
services/gateway/: Dockerfile  pyproject.toml
services/ingestion/: pyproject.toml
services/ingestion/ingestion/: __init__.py  ledger_writer.py  pipeline.py
services/ingestion/ingestion/entity_resolution/: resolver.py
services/interface/: Dockerfile  pyproject.toml
services/interface/interface/: __init__.py
services/memory/: Dockerfile  pyproject.toml
services/memory/memory/: __init__.py  main.py
services/memory/memory/graph/: client.py
services/memory/memory/ledger/: store.py
tests/: pyproject.toml
tests/unit/: test_entity_resolution.py  test_schemas.py
