[tool.uv.workspace]
members = ["packages/*", "services/*", "tests"]

[project]
name = "aios"
version = "0.1.0"
description = "AI Operating System for Companies"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
aios-core       = { workspace = true }
aios-memory     = { workspace = true }
aios-ingestion  = { workspace = true }
aios-enrichment = { workspace = true }
aios-connectors = { workspace = true }
aios-gateway    = { workspace = true }
aios-interface  = { workspace = true }
aios-agents     = { workspace = true }
