[project]
name = "aios-connectors"
version = "0.1.0"
description = "GitHub, Linear, and Slack connectors"
requires-python = ">=3.11"

dependencies = [
    "aios-core",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "PyGithub>=2.0",
    "slack-sdk>=3.0",
    "apscheduler>=3.10",
    "redis>=5.0",
    "cryptography>=42.0",
]

[tool.hatch.build.targets.wheel]
packages = ["connectors"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
