[project]
name = "aios-gateway"
version = "0.1.0"
description = "API Gateway — authentication, rate limiting, reverse proxy"
requires-python = ">=3.11"

dependencies = [
    "aios-core",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
