[project]
name = "aios-interface"
version = "0.1.0"
description = "Chat API, alert webhooks, and draft endpoints"
requires-python = ">=3.11"

dependencies = [
    "aios-core",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "redis>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["interface"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
