[project]
name = "aios-tests"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aios-core",
    "aios-memory",
    "aios-ingestion",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["unit", "integration", "e2e"]
